--- a/templates/events.html
+++ b/templates/events.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UK Events</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
+
+    <h2>I'm extending the base template!</h2>
+
     {% for event in events %}
         {{ event.event_name }}<br>
         {{ event.category_name }}<br>
@@ -13,5 +10,5 @@
         {{ event.interested }}<br>
         {{ event.date }}<br>
     {% endfor %}
-</body>
-</html>
+
+{% endblock %}
