--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
+
+.text-shadow {
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+}
+
 body {
-    background-color:navy;
+    color: whitesmoke;
+    font-family: Fredoka;
+    font-size: 16px;
+    padding: 0;
+    margin: 0;
+
+
+}
+
+section {
+    background-image: url(../images/background.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: none;
+    opacity: 0.8;
+    width: 100vw;
+    min-height: 100vh;
 }
