--- a/templates/base.html
+++ b/templates/base.html
@@ -11,9 +11,43 @@
     <title>UK Events</title>
 </head>
 <body>
+        <header>
+            <!-- top navbar -->
+            <nav class="nav-extended text-shadow indigo darken-4">
+                <div class="nav-wrapper">
+                    <a href="{{ url_for('get_events') }}" class="brand-logo">UK Events</a>
+                    <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
+                    <ul class="right hide-on-med-and-down">
+                        <li><a href="{{ url_for('get_events') }}">Home</a></li>
+                        <li><a href="#">Profile</a></li>
+                        <li><a href="#">New Event</a></li>
+                        <li><a href="#">Manage Categories</a></li>
+                        <li><a href="#">Log Out</a></li>
+                        <li><a href="#">Log In</a></li>
+                        <li><a href="#">Register</a></li>
+                    </ul>
+                </div>
+            </nav>
 
-    {% block content %}
-    {% endblock %}
+            <!-- mobile sidenav -->
+            <ul class="sidenav" id="mobile-demo">
+                <li><h4 class="center-align indigo-text text-darken 4">UK Events</h4></li>
+                <li><a href="{{ url_for('get_events') }}">Home</a></li>
+                <li><a href="#">Profile</a></li>
+                <li><a href="#">New Event</a></li>
+                <li><a href="#">Manage Categories</a></li>
+                <li><a href="#">Log Out</a></li>
+                <li><a href="#">Log In</a></li>
+                <li><a href="#">Register</a></li>
+            </ul>
+        </header>
+
+        <section>
+            {% block content %}
+            {% endblock %}
+        </section>
+
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
