--- a/templates/events.html
+++ b/templates/events.html
@@ -1,13 +1,38 @@
 {% extends "base.html" %}
 {% block content %}
 
+<div class="row">
     {% for event in events %}
+        <div class="col s12 m6 xl4">
+            <div class="card card-height">
+                <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="images/marathon.jpg">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator button-floating halfway-fab grey-text text-darken-4">
+                        <i class="fas fa-ellipsis-v right"></i>
+                    </span>
+                    <h5 class="event-card"><strong>{{ event.event_name }}</strong></h5>
+                    <p class="event-card"><strong>Date:</strong> {{ event.date }}</p>
+                    <p class="event-card"><strong>location:</strong> {{ event.location }}</p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+
+  {% for event in events %}
         {{ event.event_name }}<br>
         {{ event.category_name }}<br>
         {{ event.location }}<br>
         {{ event.event_details }}<br>
         {{ event.interested }}<br>
         {{ event.date }}<br>
+        {{ event.link }}<br>
     {% endfor %}
 
 {% endblock %}
