--- a/templates/events.html
+++ b/templates/events.html
@@ -3,21 +3,21 @@
 
 <div class="row">
     {% for event in events %}
-        <div class="col s12 m6 xl4">
+        <div class="col s12 m6 l3">
             <div class="card card-height">
                 <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="images/marathon.jpg">
+                <img class="activator" src="static/images/running.jpg">
                 </div>
-                <div class="card-content">
-                    <span class="card-title activator button-floating halfway-fab grey-text text-darken-4">
+                <div class="card-content indigo-text text-darken-4">
+                    <span class="card-title activator button-floating halfway-fab indigo-text text-darken-4">
                         <i class="fas fa-ellipsis-v right"></i>
                     </span>
-                    <h5 class="event-card"><strong>{{ event.event_name }}</strong></h5>
+                    <h5 class="event-card "><strong>{{ event.event_name }}</strong></h5>
                     <p class="event-card"><strong>Date:</strong> {{ event.date }}</p>
                     <p class="event-card"><strong>location:</strong> {{ event.location }}</p>
                 </div>
                 <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                    <span class="card-title indigo-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
                     <p>Here is some more information about this product that is only revealed once clicked on.</p>
                     </div>
                 </div>
