--- a/templates/register.html
+++ b/templates/register.html
@@ -8,14 +8,16 @@
                 <!-- username -->
                 <div class="row">
 					<div class="input-field col s12">
-						<input id="username" name="username" type="text" class="validate">
+						<input id="username" name="username" type="text" minlength="6"
+                            maxlength="20" pattern="^[a-zA-Z0-9]{6,20}$" class="validate" required>
 						<label for="username">Username</label>
 					</div>
                 </div>
                 <!-- password -->
                 <div class="row">
                     <div class="input-field col s12">
-                        <input id="password" name="password" type="password" class="validate">
+                        <input id="password" name="password" type="password" minlength="6"
+                            maxlength="20" pattern="^[a-zA-Z0-9]{6,20}$" class="validate" required>
                         <label for="password">Password</label>
                     </div>
                 </div>
