--- a/templates/events.html
+++ b/templates/events.html
@@ -3,10 +3,10 @@
 
 <div class="row">
     {% for event in events %}
-        <div class="col s12 m6 l3">
+        <div class="col s12 m6 l4">
             <div class="card card-height">
-                <div class="card-image circle responsive-img waves-effect waves-block waves-light">
-                <img class="activator" src="{{ event.image }}">
+                <div class="card-image transparent circle responsive-img waves-effect waves-block waves-light">
+                <img class="activator" src="{{ event.image }}" alt="{{ event.event_name}}">
                 </div>
                 <div class="card-content indigo-text text-darken-4">
                     <span class="card-title activator button-floating halfway-fab indigo-text text-darken-4">
