--- a/templates/login.html
+++ b/templates/login.html
@@ -27,7 +27,7 @@
                         Login<i class="fas fa-sign-in-alt"></i>
                     </button>
                 </div>
-                <div class="row"></div>
+                <div class="row">
                     <div class="col s12">
                         <p class="center-align indigo-text text-darken-4">
                             New Here??
