--- a/static/css/style.css
+++ b/static/css/style.css
@@ -59,3 +59,14 @@ section {
     padding-bottom: 5px;
 }
 
+
+
+
+
+.dropdown-content li>a,.dropdown-content li>span {
+    color: #d50000;
+}
+
+.select-wrapper input.select-dropdown {
+    color: #1a237e;
+}
