--- a/templates/events.html
+++ b/templates/events.html
@@ -18,7 +18,7 @@
                     <div class="right">
                         <p>Interested? <button class="like btn-small btn-floating waves-effect waves-light indigo darken-4">
                             <i class="far fa-thumbs-up"></i></button>
-                            <span class="likeNum">0</span>
+                            <span class="interested">0</span>
                         </p>
                     </div>
                     <br>
