--- a/templates/new_event.html
+++ b/templates/new_event.html
@@ -41,8 +41,7 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="fas fa-calendar-alt prefix indigo-text text-darken-4"></i>
-                        <input id="date" name="date" minlength="5" maxlength="50" 
-                            type="text" class="validate" required>
+                        <input id="date" name="date" type="text" class="datepicker validate" required>
                         <label for="date">Event Date</label>
                     </div>
                 </div>
