Add edit button

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,6 +57,10 @@ section {
     text-overflow: ellipsis;
 }
 
+.btn-edit {
+    margin: 15px;
+}
+
 
 
 /*---------------------------------------------------------- new event */
