Edit date function from to date to string

--- a/templates/new_event.html
+++ b/templates/new_event.html
@@ -41,7 +41,7 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="fas fa-calendar-alt prefix indigo-text text-darken-4"></i>
-                        <input id="date" name="date" type="text" class="datepicker validate" required>
+                        <input id="date" name="date" type="date" min="2025-01-01" max="2025-12-31" class="validate" required>
                         <label for="date">Event Date</label>
                     </div>
                 </div>
