--- a/templates/edit_event.html
+++ b/templates/edit_event.html
@@ -5,7 +5,7 @@
     <div class="col s12 m8 offset-m2">
         <div class="card-panel indigo lighten-5">
             <h3 class="center-align indigo-text text-darken-4">Edit Event</h3>
-            <form method="POST" action="{{ url_for('edit_event', events_id._id) }}">
+            <form method="POST" action="{{ url_for('edit_event', event_id=event._id) }}">
                 <!-- Category Selector -->
                 <div class="row">
                     <div class="input-field col s12">
@@ -41,7 +41,7 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="fas fa-calendar-alt prefix indigo-text text-darken-4"></i>
-                        <input id="date" name="date" type="text" class="datepicker validate" required>
+                        <input id="date" name="date" type="date" min="2025-01-01" max="2025-12-31" class="validate" required>
                         <label for="date">Event Date</label>
                     </div>
                 </div>
