--- a/templates/events.html
+++ b/templates/events.html
@@ -15,7 +15,7 @@
                         <i class="fas fa-ellipsis-v right"></i>
                     </span>
                     <h5 class="event-card "><strong>{{ event.event_name }}</strong></h5>
-                    <p class="event-card"><strong>Date:</strong>  {{ event.date.strftime('%d %B, %Y') }}</p>
+                    <p class="event-card"><strong>Date:</strong>  {{ event.date }}</p>
                     <p class="event-card"><strong>Location:</strong> {{ event.location }}</p>
                     <div class="right">
                         <p>Interested? <button class="like btn-small btn-floating waves-effect waves-light indigo darken-4">
@@ -31,7 +31,7 @@
                     <p class="event-card indigo-text text-darken-4"><strong>Website: </strong><a href="{{ event.link }}">{{ event.event_name }}</a></p>
                     <p class="event-card indigo-text text-darken-4"><strong><em>Event created by: {{ event.created_by }}</em></strong></p>
                     <a href="" class="btn-small btn-edit indigo lighten-1">Done</a>
-                    <a href="{{ url_for('edit_event', events_id=events._id) }}" class="btn-small btn-edit indigo darken-1">Edit</a>
+                    <a href="{{ url_for('edit_event', event_id=event._id) }}" class="btn-small btn-edit indigo darken-1">Edit</a>
                     </div>
                 </div>
             </div>
