--- a/templates/edit_event.html
+++ b/templates/edit_event.html
@@ -11,9 +11,13 @@
                     <div class="input-field col s12">
                         <i class="fas fa-folder-open prefix indigo-text text-darken-4"></i>
                         <select id="category_name" name="category_name" class="validate" required>
-                            <option value="" disabled selected>Choose your event Category</option>
+                            <option value="" disabled>Choose your event Category</option>
                             {% for category in categories %}
-                                <option value="{{ category.category_name }}">{{ category.category_name }}</option>
+                                {% if category.category_name == event.category_name %}
+                                    <option value="{{ category.category_name }}"selected>{{ category.category_name }}</option>
+                                {% else %}
+                                    <option value="{{ category.category_name }}">{{ category.category_name }}</option>
+                                {% endif %}
                             {% endfor %}
                         </select>
                         <label for="category_name">Event Category</label>
@@ -24,7 +28,7 @@
                     <div class="input-field col s12">
                         <i class="fas fa-thumbtack prefix indigo-text text-darken-4"></i>
                         <input id="event_name" name="event_name" minlength="5" maxlength="50" 
-                            type="text" class="validate" required>
+                            value="{{ event.event_name }}" type="text" class="validate" required>
                         <label for="event_name">Event Name</label>
                     </div>
                 </div>
@@ -33,7 +37,7 @@
                     <div class="input-field col s12">
                         <i class="fas fa-map-marked-alt prefix indigo-text text-darken-4"></i>
                         <input id="location" name="location" minlength="5" maxlength="50" 
-                            type="text" class="validate" required>
+                        value="{{ event.location }}" type="text" class="validate" required>
                         <label for="location">Event Location</label>
                     </div>
                 </div>
@@ -41,7 +45,8 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="fas fa-calendar-alt prefix indigo-text text-darken-4"></i>
-                        <input id="date" name="date" type="date" min="2025-01-01" max="2025-12-31" class="validate" required>
+                        <input id="date" name="date" type="date" min="2025-01-01" max="2025-12-31" 
+                        value="{{ event.date }}" class="validate" required>
                         <label for="date">Event Date</label>
                     </div>
                 </div>
@@ -50,7 +55,9 @@
                     <div class="input-field col s12">
                         <i class="fas fa-align-left prefix indigo-text text-darken-4"></i>
                         <textarea id="event_details" name="event_details" minlength="5"
-                            maxlength="200" class="materialize-textarea validate" required></textarea>
+                            maxlength="300" class="materialize-textarea validate" required>
+                        {{- event.event_details -}}
+                        </textarea>
                         <label for="event_details">Event Details</label>
                     </div>
                 </div>
@@ -59,7 +66,7 @@
                     <div class="input-field col s12">
                         <i class="fas fa-link prefix indigo-text text-darken-4"></i>
                         <input id="link" name="link" minlength="5" maxlength="200" 
-                            type="text" class="validate" required>
+                        value="{{ event.link }}"type="text" class="validate" required>
                         <label for="link">Website Link</label>
                     </div>
                 </div>
@@ -68,7 +75,7 @@
                     <div class="input-field col s12">
                         <i class="fas fa-image prefix indigo-text text-darken-4"></i>
                         <input id="image" name="image" minlength="5" maxlength="200"
-                            type="text" class="validate" required>
+                        value="{{ event.image }}"type="text" class="validate" required>
                         <label for="image">Image URL</label>
                         <p class="indigo-text text-darken-4">Having trouble? Try searching for an image on the web, right click on it, 
                             select 'open image in a new tab' and copy/paste the URL(the web address 
@@ -78,6 +85,9 @@
                 <!-- Submit Button -->
                 <div class="row">
                     <div class="col s12 center-align">
+                        <a href="{{ url_for('get_events') }}" class="btn-large red darken-4 text-shadow">
+                            Cancel <i class="fas fa-times-circle right"></i>
+                        </a>
                         <button type="submit" class="btn-large indigo darken-4 text-shadow">
                             Edit Event <i class="fas fa-edit right"></i>
                         </button>
