--- a/templates/events.html
+++ b/templates/events.html
@@ -30,8 +30,10 @@
                     <p class="indigo-text text-darken-4">{{ event.event_details }}</p><br>
                     <p class="event-card indigo-text text-darken-4"><strong>Website: </strong><a href="{{ event.link }}">{{ event.event_name }}</a></p>
                     <p class="event-card indigo-text text-darken-4"><strong><em>Event created by: {{ event.created_by }}</em></strong></p>
-                    <a href="" class="btn-small btn-edit red darken-4">Done</a>
-                    <a href="{{ url_for('edit_event', event_id=event._id) }}" class="btn-small btn-edit indigo darken-4">Edit</a>
+                    {% if session.user|lower == event.created_by|lower %}
+                        <a href="" class="btn-small btn-edit red darken-4">Done</a>
+                        <a href="{{ url_for('edit_event', event_id=event._id) }}" class="btn-small btn-edit indigo darken-4">Edit</a>
+                    {% endif %}
                     </div>
                 </div>
             </div>
