--- a/templates/edit_event.html
+++ b/templates/edit_event.html
@@ -46,7 +46,7 @@
                     <div class="input-field col s12">
                         <i class="fas fa-calendar-alt prefix indigo-text text-darken-4"></i>
                         <input id="date" name="date" type="date" min="2025-01-01" max="2025-12-31" 
-                        value="{{ event.date }}" class="validate" required>
+                            value="{{ event.date }}" class="validate indigo-text text-darken-4" required>
                         <label for="date">Event Date</label>
                     </div>
                 </div>
