--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,6 +10,9 @@ body {
     font-size: 16px;
     padding: 0;
     margin: 0;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 }
 
 section {
@@ -71,3 +74,10 @@ section {
 .select-wrapper input.select-dropdown {
     color: #1a237e;
 }
+
+
+/*---------------------------------------------------------- footer */
+.page-footer {
+    text-align: center;
+}
+
