--- a/templates/base.html
+++ b/templates/base.html
@@ -68,6 +68,20 @@
             {% endblock %}
         </section>
 
+        <!--Footer-->
+        <footer class="page-footer indigo darken-4">
+            <div class="container text-uppercase text-shadow">
+                <span>Find us on:</span>
+                <i class="fab fa-facebook" aria-hidden="true"></i>
+                <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (link opens in a new tab)">Facebook</a>
+                <i class="fab fa-instagram" aria-hidden="true"></i>
+                <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (link opens in a new tab)">Instagram</a>
+                <i class="fab fa-twitter" aria-hidden="true"></i>
+                <a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Find us on Twitter (link opens in a new tab)">Twitter</a>
+                <p>Copyright © UK Events 2024</p>
+            </div>
+        </footer>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
