--- a/templates/categories.html
+++ b/templates/categories.html
@@ -5,15 +5,22 @@
     <div class="card-panel indigo lighten-5">
         <h3 class="indigo-text text-darken-4 center-align">Manage Categories</h3>
         <br>
+        <div class="col s12 center-align">
+            <div class="row">
+                <a href="{{ url_for('new_category') }}" class="btn-large  indigo darken-2 text-shadow">
+                    Add Category <i class="fas fa-plus-square right"></i>
+                </a>
+            </div>
+        </div>
         <div class="row">
             {% for category in categories %}
-                <div class="col s12 m3">
+                <div class="col s12 m6">
                     <div class="card indigo darken-4 text-shadow center-align">
                         <div class="card-content white-text indigo darken-1 text-shadow">
                             <span class="card-title">{{ category.category_name }}</span>
                         </div>
                         <div class="card-action">
-                            <a href="#" class="btn indigo lighten-5">Edit</a>
+                            <a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn indigo lighten-5">Edit</a>
                             <a href="#" class="btn red darken-4">Delete</a>
                         </div>
                     </div>
