--- a/templates/categories.html
+++ b/templates/categories.html
@@ -21,7 +21,7 @@
                         </div>
                         <div class="card-action">
                             <a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn indigo lighten-5">Edit</a>
-                            <a href="#" class="btn red darken-4">Delete</a>
+                            <a href="{{ url_for('delete_category', category_id=category._id) }}" class="btn red darken-4">Delete</a>
                         </div>
                     </div>
                     <br>
