--- a/templates/events.html
+++ b/templates/events.html
@@ -3,6 +3,24 @@
 
 <h3 class="center-align white-text text-darken-4">2025 Events</h3>
 <br>
+<div class="row card-panel indigo lighten-5">
+    <form action="{{ url_for('search') }}" method="post" class="col s12">
+        <div class="row valign-wrapper center-align">
+            <div class="input-field col s12 m8">
+                <i class="fas fa-search prefix indigo darken-4"></i>
+                <input type="text" name="query" id="query" minlength="3" class="validate" required>
+                <label for="query">Search Tasks</label>
+            </div>
+            <div class="col s12 m4">
+                <a href="{{ url_for('get_events') }}" class="red darken-4 btn text-shadow">Reset</a>
+                <button type="submit" class="indigo darken-4 btn text-shadow">
+                    <i class="fas fa-search left"></i> Search
+                </button>
+            </div>
+        </div>
+    </form>
+</div>
+
 <div class="row">
     {% for event in events %}
         <div class="col s12 m6 l4">
