--- a/templates/events.html
+++ b/templates/events.html
@@ -1,29 +1,32 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <div class="row card-panel indigo lighten-5">
-        <h3 class="center-align indigo-text text-darken-4">2025 Events</h3>
-        <form action="{{ url_for('search') }}" method="post" class="col s12">
-            <div class="row valign-wrapper center-align">
-                <div class="input-field col s12 m8">
-                    <i class="fas fa-search prefix indigo darken-4"></i>
-                    <input type="text" name="query" id="query" minlength="3" class="validate" required>
-                    <label for="query">Search Tasks</label>
-                </div>
-                <div class="col s12 m4">
-                    <a href="{{ url_for('get_events') }}" class="red darken-4 btn text-shadow">Reset</a>
-                    <button type="submit" class="indigo darken-4 btn text-shadow">
-                        <i class="fas fa-search left"></i> Search
-                    </button>
-                </div>
+    <div class="row">
+        <div class="col s12 m8 offset-m2">
+            <div class="card-panel indigo lighten-5">
+                <h3 class="center-align indigo-text text-darken-4">2025 Events</h3>
+                <form action="{{ url_for('search') }}" method="post">
+                    <div class="row valign-wrapper center-align">
+                        <div class="input-field col s12 m9">
+                            <input type="text" name="query" id="query" minlength="3" class="validate" required>
+                            <label for="query">Search Tasks</label>
+                        </div>
+                        <div class="col s12 m5">
+                            <a href="{{ url_for('get_events') }}" class="red darken-4 btn text-shadow">Reset</a>
+                            <button type="submit" class="indigo darken-4 btn text-shadow">
+                                <i class="fas fa-search"></i>
+                            </button>
+                        </div>
+                    </div>
+                </form>
             </div>
-        </form>
+        </div>
     </div>
 
     <div class="row">
         {% if events|length > 0 %}
             {% for event in events %}
-                <div class="col s12 m6 l4">
+                <div class="col s8 m6 l4">
                     <div class="card card-height">
                         <div class="card-image transparent circle responsive-img waves-effect waves-block">
                             <img class="activator" src="{{ event.image }}" alt="{{ event.event_name}}">
@@ -35,9 +38,6 @@
                             <h5 class="event-card "><strong>{{ event.event_name }}</strong></h5>
                             <p class="event-card"><strong>Date:</strong>  {{ event.date }}</p>
                             <p class="event-card"><strong>Location:</strong> {{ event.location }}</p>
-                            <div class="left">
-                                <a href="{{ url_for('profile', username=session['user']) }}" class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">add</i></a>
-                            </div>
                             <div class="right">
                                 {% if session.user|lower %}
                                     <p>Interested? <button id=one-use class="like btn-small btn-floating waves-effect waves-light indigo darken-4">
