--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,7 @@ body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+    background-color: #1a237e;
 }
 
 section {
@@ -25,15 +26,30 @@ section {
     padding: 110px;
 }
 
+.container {
+    padding: 10px;
+}
+
 
 .center-align {
     margin: 0;
 }
 
-.flashes h3 {
-    line-height: 1;
+/*---------------------------------------------------------- Flashes */
+
+.flashes h4 {
+    line-height: 2;
 }
 
+/*---------------------------------------------------------- search bar */
+.search-bar {
+    padding: 0;
+    margin: 0;
+}
+
+.valign-wrapper {
+    flex-wrap: wrap;
+}
 
 /*---------------------------------------------------------- event cards */
 
@@ -103,8 +119,14 @@ section {
     margin-top: 0px;
     font-size: small;
   }
-    h3 {
-    font-size: 20px;
+    h4 {
+    font-size: medium;
  }
+}
+
+@media only screen and (max-width: 580px) {
+    nav .brand-logo {
+        font-size: medium;
+    }
 }
 
