--- a/templates/base.html
+++ b/templates/base.html
@@ -37,14 +37,14 @@
             </nav>
 
             <!-- mobile sidenav -->
-            <ul class="sidenav" id="mobile-demo">
-                <li><h4 class="center-align indigo-text text-darken 4">UK Events</h4></li>
+            <ul class="sidenav indigo-text text-darken-4" id="mobile-demo">
+                <li><h4 class="center-align indigo-text text-darken-4">UK Events</h4></li>
                 <li><a href="{{ url_for('get_events') }}">Home</a></li>
                 {% if session.user %}
                     <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                     <li><a href="{{ url_for('new_event') }}">New Event</a></li>
                     {% if session.user|lower == "admin"|lower %}
-                        <li><a href="{{ url_for('get_categories') }}"></a></li>
+                        <li><a href="{{ url_for('get_categories') }}">Manage Categories</a></li>
                     {% endif %}
                     <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                 {% else %}
@@ -54,20 +54,20 @@
             </ul>
         </header>
 
-        <section>
+        <div>
             <!-- flash messages -->
             {% with messages = get_flashed_messages() %}
                 {% if messages %}
                     {% for message in messages %}
                         <div class="row flashes">
-                            <div class="col s12 m8 offset-m2">
                                 <h3 class="indigo lighten-5 center-align indigo-text text-darken-4">{{ message }}</h3>
-                            </div>
                         </div>
                     {% endfor %}
                 {% endif %}
             {% endwith %}
+        </div>
 
+        <section class="container">
             {% block content %}
             {% endblock %}
         </section>
