--- a/templates/events.html
+++ b/templates/events.html
@@ -1,17 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <div class="row">
+    <div class="row search-bar">
         <div class="col s12 m8 offset-m2">
             <div class="card-panel indigo lighten-5">
-                <h3 class="center-align indigo-text text-darken-4">2025 Events</h3>
+                <h4 class="center-align indigo-text text-darken-4">2025 Events</h4>
                 <form action="{{ url_for('search') }}" method="post">
                     <div class="row valign-wrapper center-align">
-                        <div class="input-field col s12 m9">
+                        <div class="input-field col s12 m8">
                             <input type="text" name="query" id="query" minlength="3" class="validate" required>
                             <label for="query">Search Tasks</label>
                         </div>
-                        <div class="col s12 m5">
+                        <div class="col s12 m4">
                             <a href="{{ url_for('get_events') }}" class="red darken-4 btn text-shadow">Reset</a>
                             <button type="submit" class="indigo darken-4 btn text-shadow">
                                 <i class="fas fa-search"></i>
@@ -26,7 +26,7 @@
     <div class="row">
         {% if events|length > 0 %}
             {% for event in events %}
-                <div class="col s8 m6 l4">
+                <div class="col s12 m6 l4">
                     <div class="card card-height">
                         <div class="card-image transparent circle responsive-img waves-effect waves-block">
                             <img class="activator" src="{{ event.image }}" alt="{{ event.event_name}}">
@@ -35,7 +35,7 @@
                             <span class="card-title activator button-floating halfway-fab indigo-text text-darken-4">
                                 <i class="fas fa-ellipsis-v right"></i>
                             </span>
-                            <h5 class="event-card "><strong>{{ event.event_name }}</strong></h5>
+                            <h6 class="event-card "><strong>{{ event.event_name }}</strong></h6>
                             <p class="event-card"><strong>Date:</strong>  {{ event.date }}</p>
                             <p class="event-card"><strong>Location:</strong> {{ event.location }}</p>
                             <div class="right">
