Add delete modal to profile.html

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -43,7 +43,7 @@
                             <p class="event-card indigo-text text-darken-4"><strong>Website: </strong><a href="{{ event.link }}">{{ event.event_name }}</a></p>
                             <p class="event-card indigo-text text-darken-4"><strong><em>Event created by: {{ event.created_by }}</em></strong></p>
                             {% if session.user|lower == event.created_by|lower %}
-                            <a href="{{ url_for('delete_event', event_id=event._id) }}" class="btn-small btn-edit red darken-4">Delete</a>
+                            <a href="#deleteevent" data-event-id="{{ event._id }}" class="btn modal-trigger delete-btn red darken-4">Delete</button>
                             <a href="{{ url_for('edit_event', event_id=event._id) }}" class="btn-small btn-edit indigo darken-4">Edit</a>
                             {% endif %}
                         </div>
@@ -54,6 +54,18 @@
         {% else %}
             <h3 class="white-text text-darken-4 indigo darken-4 center-align">It looks like you haven't added an event yet!</h3>
         {% endif %}   
+    </div>
+
+    <div id="deleteevent" class="modal">
+        <div class="modal-content">
+            <h4 class="indigo-text text-darken-4">Are you sure you want to delete this event?</h4>
+        </div>
+        <div class="modal-footer">
+            <a href="{{ url_for('profile', username=session['user']) }}" id="confirm-delete"
+                class="modal-close btn-small red darken-4">Delete</a>
+            <a href="{{ url_for('get_events') }}" 
+                class="modal-close btn-small indigo darken-4">Cancel</a>
+        </div>
     </div>
 
 {% endblock %}
