Add new section to read.me

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -38,7 +38,7 @@
                             <br>
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title indigo-text text-darken-4"><i class="material-icons right indigo-text text-darken-4 far fa-window-close"></i><h5><strong>{{ event.event_name }}</strong></h5></span>
+                            <span class="card-title indigo-text text-darken-4"><i class="material-icons right indigo-text text-darken-4 far fa-window-close"></i><strong>{{ event.event_name }}</strong></span>
                             <p class="indigo-text text-darken-4">{{ event.event_details }}</p><br>
                             <p class="event-card indigo-text text-darken-4"><strong>Website: </strong><a href="{{ event.link }}">{{ event.event_name }}</a></p>
                             <p class="event-card indigo-text text-darken-4"><strong><em>Event created by: {{ event.created_by }}</em></strong></p>
