--- a/templates/events.html
+++ b/templates/events.html
@@ -28,8 +28,8 @@
             {% for event in events %}
                 <div class="col s12 m6 l4">
                     <div class="card card-height">
-                        <div class="card-image transparent circle responsive-img waves-effect waves-block">
-                            <img class="activator" src="{{ event.image }}" alt="{{ event.event_name}}">
+                        <div class="card-image transparent circle waves-effect waves-block">
+                            <img class="activator responsive-img" src="{{ event.image }}" alt="{{ event.event_name}}">
                         </div>
                         <div class="card-content indigo-text text-darken-4">
                             <span class="card-title activator button-floating halfway-fab indigo-text text-darken-4">
