--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,7 +17,7 @@
                 {% if session.user|lower == event.created_by|lower %}
                 <div class="col s12 m6 l4">
                     <div class="card card-height">
-                        <div class="card-image transparent circle responsive-img waves-effect waves-block">
+                        <div class="card-image transparent responsive-img circle waves-effect waves-block">
                             <img class="activator" src="{{ event.image }}" alt="{{ event.event_name}}">
                         </div>
                         <div class="card-content indigo-text text-darken-4">
