--- a/templates/events.html
+++ b/templates/events.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-
+    <!--Search Bar-->
     <div class="row search-bar">
         <div class="col s12 m8 offset-m2">
             <div class="card-panel indigo lighten-5">
@@ -22,11 +22,12 @@
             </div>
         </div>
     </div>
-
+    <!--Event Cards-->
     <div class="row">
         {% if events|length > 0 %}
             {% for event in events %}
                 <div class="col s12 m6 l4">
+                    <!--Card Front-->
                     <div class="card card-height">
                         <div class="card-image transparent circle responsive-img waves-effect waves-block">
                             <img class="activator" src="{{ event.image }}" alt="{{ event.event_name}}">
@@ -48,6 +49,7 @@
                             </div>
                             <br>
                         </div>
+                        <!--Card Back-->
                         <div class="card-reveal">
                             <span class="card-title indigo-text text-darken-4"><i class="material-icons right indigo-text text-darken-4 far fa-window-close"></i><strong>{{ event.event_name }}</strong></span>
                             <p class="indigo-text text-darken-4">{{ event.event_details }}</p><br>
@@ -66,6 +68,7 @@
         {% endif %}   
     </div>
 
+    <!--Delete Modal-->
     <div id="deleteevent" class="modal">
         <div class="modal-content">
             <h4 class="indigo-text text-darken-4">Are you sure you want to delete this event?</h4>
