--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
         <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
             <div class="card-panel indigo lighten-5">
                 <h4 class="center-align indigo-text text-darken-4">Sign Up</h4>
-                <!-- username -->
+                <!--Username-->
                 <div class="row">
 					<div class="input-field col s12">
 						<input id="username" name="username" type="text" minlength="5"
@@ -13,7 +13,7 @@
 						<label for="username">Username</label>
 					</div>
                 </div>
-                <!-- password -->
+                <!--Password-->
                 <div class="row">
                     <div class="input-field col s12">
                         <input id="password" name="password" type="password" minlength="5"
@@ -21,7 +21,7 @@
                         <label for="password">Password</label>
                     </div>
                 </div>
-                <!-- register -->
+                <!--Register-->
                 <div class="row">
                     <button type="submit" class="col s12 btn-large indigo darken-4 text-shadow">
                         Register <i class="fas fa-sign-in-alt"></i>
