--- a/templates/404.html
+++ b/templates/404.html
@@ -10,7 +10,7 @@
                     This page does not exist.
                 </h4>
                 <br>
-                <a class="btn btn-primary btn-lg indigo darken-4 href="events.html" role="button">Home</a>
+                <a class="btn btn-primary btn-lg indigo darken-4" href="{{ url_for('get_events') }}" role="button">Home</a>
             </div>
         </div>
     </div>
