--- a/templates/profile.html
+++ b/templates/profile.html
@@ -23,7 +23,7 @@
                         <div class="card-content indigo-text text-darken-4">
                             <span class="card-title activator button-floating halfway-fab indigo-text text-darken-4">
                                 <i class="fas fa-ellipsis-v right"></i></span>
-                            <p class="event-card "><strong>{{ event.event_name }}</strong></p>
+                            <h6 class="event-card "><strong>{{ event.event_name }}</strong></h6>
                             <p class="event-card"><strong>Date:</strong>  {{ event.date }}</p>
                             <p class="event-card"><strong>Location:</strong> {{ event.location }}</p>
                             <div class="right">
